samples/_failures_safe/1761394628_f8bd09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af804556.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_af804556.c:161:33: error: expected ‘]’ at end of input
  161 |         switch (tokens->tokens[i
      |                                 ^
      |                                 ]
./samples/SAFE/__tmp_af804556.c:161:17: error: switch quantity not an integer
  161 |         switch (tokens->tokens[i
      |                 ^~~~~~
./samples/SAFE/__tmp_af804556.c:161:9: error: expected declaration or statement at end of input
  161 |         switch (tokens->tokens[i
      |         ^~~~~~
./samples/SAFE/__tmp_af804556.c:161:9: error: expected declaration or statement at end of input
